# pgjinja

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  TEST_IMPLEMENTATION_SUMMARY.md  TEST_PLAN.md  main.py  py.typed  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg
.junie/: guidelines.md
docs/: plan.md  tasks.md
examples/: merchant_example.py
examples/template/: select_merchant.sql.jinja
src/: postgres.py
src/pgjinja/: __init__.py  main.py  pg_model.py  pgjinja.py  pgjinja_async.py  postgres.py
src/pgjinja/schemas/: db_settings.py
src/pgjinja/shared/: common.py
template/: select_merchant.sql.jinja
tests/: __init__.py  conftest.py  test_common.py  test_db_settings.py  test_integration.py  test_merchant.py  test_pgjinja.py  test_pgjinja_async.py  test_pgjinja_simple.py  test_postgres.py
