[project]
name = "pgjinja"
version = "0.1.0"
description = " A Python package that seamlessly integrates PostgreSQL, Jinja templating, and Pydantic for type-safe database queries "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinjasql2>=0.1.11",
    "psycopg[binary,pool]>=3.2.6",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
